package com.example.composenotesapp

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val ADD_EDIT_TITLE = "ADD_EDIT_TITLE"
    const val ADD_EDIT_CONTENT = "ADD_EDIT_CONTENT"
    const val NOTE_ITEM = "NOTE_ITEM"

}