<resources>
    <string name="app_name">ComposeNotesApp</string>
    <string name="notes_app">Notes App</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="enter_title">Enter title...</string>
    <string name="enter_some_content">Enter some content</string>
</resources>