...
                    text = stringResource(R.string.notes_app),
                    style = MaterialTheme.typography.headlineLarge,
                )
                IconButton(
                    onClick = { viewModel.onEvent(NotesEvent.ToggleOrderSectionVisibility) }
                ) {
                    Icon(imageVector = Icons.AutoMirrored.Filled.Sort, contentDescription = "Sort")
                }
            }
            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
                enter = fadeIn() + slideInVertically(),
                exit = fadeOut() + slideOutVertically()
...
